snaplogger (1.0.37.0~bionic) bionic; urgency=high

  * Added the boot_id system variable.
  * Added a few missing guards in the appender.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 11 Jul 2021 20:46:55 -0700

snaplogger (1.0.36.0~bionic) bionic; urgency=high

  * Added the `--logger-show-banner` and `--logger-hide-banner` options.
  * Allow tools to hide the logger banner by default.
  * Added a "banner" component.
  * Added the `--list-severities` command.
  * Changed the process_logger_options() to continue on errors so all the
    command line options get processed and the caller can decide whether to
    continue or not by testing the result.
  * Added a test against process_logger_options() in the tools and stop
    immediately on errors.
  * Added some documentation.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 04 Jun 2021 11:26:37 -0700

snaplogger (1.0.35.0~bionic) bionic; urgency=high

  * Catch an exception when trying to format your message if it has invalid
    UTF-8 bytes.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 01 Jun 2021 17:57:14 -0700

snaplogger (1.0.34.0~bionic) bionic; urgency=high

  * Fixed the test of system variables (needed == not !=).
  * Fixed parent directory test in mk.
  * Fixed the -t option in mk.
  * Fixed one test which now gets the "id" field.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 01 Jun 2021 14:11:43 -0700

snaplogger (1.0.33.0~bionic) bionic; urgency=high

  * Added support for system fields (i.e. "_timestamp", etc.)
  * Forbid user field names that start with '_' (reserved for system names).

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 01 Jun 2021 13:38:26 -0700

snaplogger (1.0.32.0~bionic) bionic; urgency=high

  * Added a unique message identifier as the field named "id".
  * Documented the ${field[s]:...} formats.
  * Updated the documentation of the no-repeat (maximum, special values).
  * Generate a formatted message without varying values (i.e. timestamp
    and fields) to with in the no-repeat test.
